Fix mask token on current context display